test/inductive/inductive/reject_return_type.qdt
import Std.Nat

inductive T1 : Nat → Type where
  | z1 : T1
